# singly_linked_list

./: CMakeLists.txt  README.md
GoogleTest/lib/Debug/: gtest_maind.lib
GoogleTest/lib/Release/: gtest_main.lib
include/: ErrorCode.h  SinglyLinkedList.h
src/: SinglyLinkedList.cpp  main.cpp
test/: CMakeLists.txt
test/src/: unitTests.cpp
